--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,5 +9,7 @@
     .container-sm,
     .container {
         max-width: 1440px;
+        display: flex;
+        justify-content: space-between;
     }
 }
