--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,16 @@ $green: #198754;
 $teal: #20c997;
 $cyan: #0dcaf0;
 
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #F1F2F2 !default;
+$gray-400: #CCCCCC !default;
+$gray-500: #6A6A6A !default;
+$gray-600: #333333 !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+
 $grid-breakpoints: (
     xs: 0,
     sm: 576px,
@@ -33,7 +43,7 @@ $container-max-widths: (
 
 body {
     font-family: "Noto Sans KR", sans-serif;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .container-xxl,
@@ -92,16 +102,35 @@ body {
     @include font-size(1rem);
 }
 
-@include media-breakpoint-up(sm) {}
+.contact {
+    li {}
+}
 
-@include media-breakpoint-up(md) {}
 
+
+
+//
+//
+//
+//
+//
+//
+// mobile
+@include media-breakpoint-down(lg) {
+    .nav-item {
+        padding: 1em 0.5em;
+        border-bottom: 1px solid #e2e2e2;
+    }
+}
+
+// desktop
 @include media-breakpoint-up(lg) {
 
     .navbar-nav .show>.nav-link,
     .navbar-nav .nav-link.active {
         color: $blue;
     }
+
 
     .nav-item.active::after {
         content: "";
@@ -133,7 +162,3 @@ body {
         padding: 0;
     }
 }
-
-@include media-breakpoint-up(xl) {}
-
-@include media-breakpoint-up(xxl) {}
