--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,9 @@
+$font-size-root:              10px !default;
+$font-size-base:              1.6rem !default; // Assumes the browser default, typically `16px`
+$font-size-sm:                $font-size-base * .875 !default;
+$font-size-lg:                $font-size-base * 1.25 !default;
+
+
 $blue: #017afb;
 $indigo: #6610f2;
 $purple: #6f42c1;
@@ -11,41 +17,63 @@ $cyan: #0dcaf0;
 
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
-$gray-300: #F1F2F2 !default;
-$gray-400: #CCCCCC !default;
-$gray-500: #6A6A6A !default;
+$gray-300: #e2e2e2 !default;
+$gray-400: #cccccc !default;
+$gray-500: #6a6a6a !default;
 $gray-600: #333333 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 
+// scss-docs-start spacer-variables-maps
+$spacer: 1.8rem !default;
+$spacers: (
+  0: 0,
+  1: $spacer * .25,
+  2: $spacer * .5,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 2,
+  6: $spacer * 2.5,
+  7: $spacer * 3,
+  8: $spacer * 3.5,
+  9: $spacer * 4,
+  10: $spacer * 5,
+
+) !default;
+// scss-docs-end spacer-variables-maps
+
+
 $grid-breakpoints: (
     xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px,
-    xxl: 1440px,
-    ) !default;
-
-$container-max-widths: (
     sm: 540px,
     md: 720px,
     lg: 960px,
-    xl: 1140px,
+    xl: 1200px,
     xxl: 1440px,
-    ) !default;
+) !default;
+
+$container-max-widths: (
+    sm: 100%,
+    md: 100%,
+    lg: 100%,
+    xl: 100%,
+    xxl: 1440px,
+) !default;
 
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
-);
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
 
 body {
     font-family: "Noto Sans KR", sans-serif;
     font-weight: 400;
 }
 
+
+.container-fluid {
+    padding: 0 $font-size-base;
+}
 .container-xxl,
 .container-xl,
 .container-lg,
@@ -58,6 +86,7 @@ body {
 .navbar {
     &-toggler {
         border: none;
+        padding: 0;
     }
 
     &-toggler:focus {
@@ -65,6 +94,7 @@ body {
     }
 
     &-toggler-icon {
+        width: 2.5rem;
         background-image: url("../../dist/images/common/btn_hambuger.svg");
     }
 
@@ -74,7 +104,7 @@ body {
     }
 }
 
-.navbar-nav .show>.nav-link,
+.navbar-nav .show > .nav-link,
 .navbar-nav .nav-link.active {
     color: #2d2d2d;
 }
@@ -92,22 +122,84 @@ body {
     padding: 0;
     display: flex;
     align-items: center;
+    font-size: 1.8rem;
 }
 
 .btn-close {
+    font-size: 2rem;
     opacity: 1;
-}
 
-.welcome {
-    @include font-size(1rem);
 }
 
 .contact {
-    li {}
+    a {
+        font-size: 1.4rem;
+    }
 }
 
+.share {
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 4rem;
+        height: 4rem;
+        background-color: #FAFAFA;
+    }
+}
 
+.carousel {
+    &-caption > h2 {
+        font-size: 2.2rem;
+    }
+    &-caption{
+        padding: 0;
+        left: auto;
+        right:8%;
+        top: 50%;
+        bottom: auto;
+        transform: translateY(-35%);
 
+        & > span {
+            display: inline-block;
+            width: 4rem;
+            margin-bottom: 0.5em;
+        }
+    }
+
+    &-indicators{
+        margin-bottom: 0.5rem;
+    }
+    &-indicators [data-bs-target] {
+        width: 1rem;
+        height: 1rem;
+        margin:0 0.5em;
+    }
+    &-indicators .active {
+        opacity: 1;
+        background-color: $black;
+    }
+    &-control-prev, 
+    &-control-next {
+        width: 7%;
+    }
+    &-control-prev-icon, 
+    &-control-next-icon {
+        width: 2.4rem;
+        height: 4.8rem;
+    }
+    &-control-prev-icon {
+        background-image: url("../../dist/images/common/btn_slide_prev.svg");
+    }
+    &-control-next-icon {
+        background-image: url("../../dist/images/common/btn_slide_next.svg");
+    }
+    
+}
+
+.footer {
+    font-size: 1.2rem;
+}
 
 //
 //
@@ -121,36 +213,51 @@ body {
         padding: 1em 0.5em;
         border-bottom: 1px solid #e2e2e2;
     }
+
+    .carousel {
+        &-indicators {
+            right: 5%;
+            left: auto;
+            margin-right: 0;
+        }
+        &-indicators [data-bs-target] {
+            width: 0.6rem;
+            height: 0.6rem;
+            margin:0 0.25em;
+        }
+        &-caption{
+            transform: translateY(-50%);
+        }
+    }
 }
 
 // desktop
 @include media-breakpoint-up(lg) {
-
-    .navbar-nav .show>.nav-link,
+    .navbar-nav .show > .nav-link,
     .navbar-nav .nav-link.active {
         color: $blue;
     }
-
 
     .nav-item.active::after {
         content: "";
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 6px;
+        height: 0.6rem;
         background: $blue;
     }
 
     .navbar-expand-lg .navbar-nav .nav-item {
-        margin: 0 0 0 1em;
+        margin: 0 0 0 3.6rem;
     }
 
     .navbar-expand-lg .navbar-nav .nav-link {
+        font-size: $font-size-base;
         color: $blue;
     }
 
     .navbar-expand-lg .offcanvas {
-        height: 64px !important;
+        height: 6.4rem !important;
     }
 
     .navbar-expand-lg .offcanvas .offcanvas-body {
@@ -158,7 +265,23 @@ body {
     }
 
     .navbar-expand-lg .offcanvas .offcanvas-end {
-        height: 64px;
+        height: 6.4rem;
         padding: 0;
+    }
+
+    .carousel {
+        &-caption > h2 {
+            font-size: 4.8rem;
+        }
+    }
+
+    .footer {
+        &-menu {
+            width: 32rem;
+
+            img {
+                transform: rotate(-90deg);
+            }
+        }
     }
 }
