--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -1,66 +1,3 @@
-$font-size-root:              10px !default;
-$font-size-base:              1.6rem !default; // Assumes the browser default, typically `16px`
-$font-size-sm:                $font-size-base * .875 !default;
-$font-size-lg:                $font-size-base * 1.25 !default;
-
-
-$blue: #017afb;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #d63384;
-$red: #dc3545;
-$orange: #fd7e14;
-$yellow: #ffc107;
-$green: #198754;
-$teal: #20c997;
-$cyan: #0dcaf0;
-
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #e2e2e2 !default;
-$gray-400: #cccccc !default;
-$gray-500: #6a6a6a !default;
-$gray-600: #333333 !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-
-// scss-docs-start spacer-variables-maps
-$spacer: 1.8rem !default;
-$spacers: (
-  0: 0,
-  1: $spacer * .25,
-  2: $spacer * .5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 2,
-  6: $spacer * 2.5,
-  7: $spacer * 3,
-  8: $spacer * 3.5,
-  9: $spacer * 4,
-  10: $spacer * 5,
-
-) !default;
-// scss-docs-end spacer-variables-maps
-
-
-$grid-breakpoints: (
-    xs: 0,
-    sm: 540px,
-    md: 720px,
-    lg: 960px,
-    xl: 1200px,
-    xxl: 1440px,
-) !default;
-
-$container-max-widths: (
-    sm: 100%,
-    md: 100%,
-    lg: 100%,
-    xl: 100%,
-    xxl: 1440px,
-) !default;
-
 // Import all of Bootstrap's CSS
 @import "~bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
@@ -70,10 +7,20 @@ body {
     font-weight: 400;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    padding: 0;
+    margin: 0;
+}
 
 .container-fluid {
     padding: 0 $font-size-base;
 }
+
 .container-xxl,
 .container-xl,
 .container-lg,
@@ -104,7 +51,7 @@ body {
     }
 }
 
-.navbar-nav .show > .nav-link,
+.navbar-nav .show>.nav-link,
 .navbar-nav .nav-link.active {
     color: #2d2d2d;
 }
@@ -149,52 +96,59 @@ body {
 }
 
 .carousel {
-    &-caption > h2 {
+    &-caption>h2 {
         font-size: 2.2rem;
     }
-    &-caption{
+
+    &-caption {
         padding: 0;
         left: auto;
-        right:8%;
+        right: 8%;
         top: 50%;
         bottom: auto;
         transform: translateY(-35%);
 
-        & > span {
+        &>span {
             display: inline-block;
             width: 4rem;
             margin-bottom: 0.5em;
         }
     }
 
-    &-indicators{
+    &-indicators {
         margin-bottom: 0.5rem;
     }
+
     &-indicators [data-bs-target] {
         width: 1rem;
         height: 1rem;
-        margin:0 0.5em;
+        margin: 0 0.5em;
     }
+
     &-indicators .active {
         opacity: 1;
         background-color: $black;
     }
-    &-control-prev, 
+
+    &-control-prev,
     &-control-next {
         width: 7%;
     }
-    &-control-prev-icon, 
+
+    &-control-prev-icon,
     &-control-next-icon {
         width: 2.4rem;
         height: 4.8rem;
     }
+
     &-control-prev-icon {
         background-image: url("../../dist/images/common/btn_slide_prev.svg");
     }
+
     &-control-next-icon {
         background-image: url("../../dist/images/common/btn_slide_next.svg");
     }
-    
+
 }
 
 .footer {
@@ -220,12 +174,14 @@ body {
             left: auto;
             margin-right: 0;
         }
+
         &-indicators [data-bs-target] {
             width: 0.6rem;
             height: 0.6rem;
-            margin:0 0.25em;
+            margin: 0 0.25em;
         }
-        &-caption{
+
+        &-caption {
             transform: translateY(-50%);
         }
     }
@@ -233,7 +189,8 @@ body {
 
 // desktop
 @include media-breakpoint-up(lg) {
-    .navbar-nav .show > .nav-link,
+
+    .navbar-nav .show>.nav-link,
     .navbar-nav .nav-link.active {
         color: $blue;
     }
@@ -270,7 +227,7 @@ body {
     }
 
     .carousel {
-        &-caption > h2 {
+        &-caption>h2 {
             font-size: 4.8rem;
         }
     }
