--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,9 +1,3 @@
-$font-size-root: 10px !default;
-$font-size-base: 1.6rem !default; // Assumes the browser default, typically `16px`
-$font-size-sm: $font-size-base * .875 !default;
-$font-size-lg: $font-size-base * 1.25 !default;
-
-
 $blue: #017afb;
 $indigo: #485CC7;
 $purple: #6f42c1;
@@ -67,6 +61,44 @@ $spacers: (
 
     ) !default;
 
+$font-size-root: 10px !default;
+$font-size-base: 1.6rem !default; // Assumes the browser default, typically `16px`
+$font-size-sm: $font-size-base * .875 !default;
+$font-size-lg: $font-size-base * 1.25 !default;
+
+
+$font-weight-lighter: lighter !default;
+$font-weight-light: 300 !default;
+$font-weight-normal: 400 !default;
+$font-weight-semibold: 600 !default;
+$font-weight-bold: 700 !default;
+$font-weight-bolder: bolder !default;
+
+$font-weight-base: $font-weight-normal !default;
+
+$line-height-base: 1.5 !default;
+$line-height-sm: 1.25 !default;
+$line-height-lg: 2 !default;
+
+$h1-font-size: $font-size-base * 2.5 !default;
+$h2-font-size: $font-size-base * 2 !default;
+$h3-font-size: $font-size-base * 1.75 !default;
+$h4-font-size: $font-size-base * 1.5 !default;
+$h5-font-size: $font-size-base * 1.25 !default;
+$h6-font-size: $font-size-base !default;
+$h7-font-size: $font-size-base * 0.75 !default;
+// scss-docs-end font-variables
+
+// scss-docs-start font-sizes
+$font-sizes: (
+    1: $h1-font-size,
+    2: $h2-font-size,
+    3: $h3-font-size,
+    4: $h4-font-size,
+    5: $h5-font-size,
+    6: $h6-font-size,
+    7: $h7-font-size,
+    ) !default;
 
 // scss-docs-start display-headings
 $display-font-sizes: (
@@ -83,6 +115,17 @@ $display-font-sizes: (
     24: 2.4rem,
     32: 3.2rem,
     ) !default;
+
+
+// scss-docs-start border-variables
+$border-width: 0 !default;
+$border-widths: (
+    1: 1px,
+    2: 2px,
+    3: 3px,
+    4: 4px,
+    5: 5px) !default;
+
 
 $grid-breakpoints: (
     xs: 0,
