--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -30,6 +30,42 @@ h6 {
     padding: 0;
 }
 
+// .btn:focus-visible {
+//     box-shadow: none;
+// }
+
+// .btn-check:checked+.btn:focus-visible,
+// :not(.btn-check)+.btn:active:focus-visible,
+// .btn:first-child:active:focus-visible,
+// .btn.active:focus-visible,
+// .btn.show:focus-visible {
+//     box-shadow: none;
+// }
+
+// .btn-check:checked+.btn,
+// :not(.btn-check)+.btn:active,
+// .btn:first-child:active,
+// .btn.active,
+// .btn.show {
+//     border: 0 none;
+//     background: transparent;
+// }
+
+.btn-check:checked+.btn img {
+    transform: rotate(180deg);
+}
+
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+
 .navbar {
     &-toggler {
         border: none;
