--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -3,8 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
 
 body {
-    font-family: "Noto Sans KR", sans-serif;
-    font-weight: 400;
+	font-family: "Noto Sans KR", sans-serif;
+	font-weight: 400;
 }
 
 h1,
@@ -13,12 +13,13 @@ h3,
 h4,
 h5,
 h6 {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
+	letter-spacing: -1px;
 }
 
 .container-fluid {
-    padding: 0 $font-size-base;
+	padding: 0 $font-size-base;
 }
 
 .container-xxl,
@@ -27,32 +28,45 @@ h6 {
 .container-md,
 .container-sm,
 .container {
-    padding: 0;
+	padding: 0;
 }
 
-// .btn:focus-visible {
-//     box-shadow: none;
-// }
+button[aria-expanded="false"].btn-category img {
+	transition: transform 0.3s;
+	transform: rotate(0);
+}
 
-// .btn-check:checked+.btn:focus-visible,
-// :not(.btn-check)+.btn:active:focus-visible,
-// .btn:first-child:active:focus-visible,
-// .btn.active:focus-visible,
-// .btn.show:focus-visible {
-//     box-shadow: none;
-// }
+button[aria-expanded="true"].btn-category img {
+	transition: transform 0.3s;
+	transform: rotate(180deg);
+}
 
-// .btn-check:checked+.btn,
-// :not(.btn-check)+.btn:active,
-// .btn:first-child:active,
-// .btn.active,
-// .btn.show {
-//     border: 0 none;
-//     background: transparent;
-// }
+.breadcrumb {
+	&-item.active {
+		font-weight: 600;
+	}
+}
 
-.btn-check:checked+.btn img {
-    transform: rotate(180deg);
+.swiper.swiperType_01 {
+	overflow: visible;
+
+	.photo {
+		max-width: 120px;
+	}
+
+	.swiper-horizontal > .swiper-pagination-bullets,
+	.swiper-pagination-bullets.swiper-pagination-horizontal,
+	.swiper-pagination-custom,
+	.swiper-pagination-fraction {
+		bottom: 0;
+	}
+	.swiper-pagination-bullet-active {
+		background: $black;
+	}
+
+	dd {
+		color: #848484;
+	}
 }
 
 //
@@ -67,128 +81,126 @@ h6 {
 //
 
 .navbar {
-    &-toggler {
-        border: none;
-        padding: 0;
-    }
+	&-toggler {
+		border: none;
+		padding: 0;
+	}
 
-    &-toggler:focus {
-        box-shadow: none;
-    }
+	&-toggler:focus {
+		box-shadow: none;
+	}
 
-    &-toggler-icon {
-        width: 2.5rem;
-        background-image: url("../../dist/images/common/btn_hambuger.svg");
-    }
+	&-toggler-icon {
+		width: 2.5rem;
+		background-image: url("../../dist/images/common/btn_hambuger.svg");
+	}
 
-    &-expand-lg {
-        height: 64px;
-        padding: 0;
-    }
+	&-expand-lg {
+		height: 64px;
+		padding: 0;
+	}
 }
 
-.navbar-nav .show>.nav-link,
+.navbar-nav .show > .nav-link,
 .navbar-nav .nav-link.active {
-    color: #2d2d2d;
+	color: #2d2d2d;
 }
 
 .nav-item {
-    position: relative;
-    height: 100%;
-    display: flex;
-    align-items: center;
+	position: relative;
+	height: 100%;
+	display: flex;
+	align-items: center;
 }
 
 .nav-link {
-    color: #2d2d2d;
-    height: 100%;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    font-size: 1.8rem;
+	color: #2d2d2d;
+	height: 100%;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	font-size: 1.8rem;
 }
 
 .btn-close {
-    font-size: 2rem;
-    opacity: 1;
-
+	font-size: 2rem;
+	opacity: 1;
 }
 
 .contact {
-    a {
-        font-size: 1.4rem;
-    }
+	a {
+		font-size: 1.4rem;
+	}
 }
 
 .share {
-    a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 4rem;
-        height: 4rem;
-        background-color: #FAFAFA;
-    }
+	a {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 4rem;
+		height: 4rem;
+		background-color: #fafafa;
+	}
 }
 
 .carousel {
-    &-caption>h2 {
-        font-size: 2.2rem;
-    }
+	&-caption > h2 {
+		font-size: 2.2rem;
+	}
 
-    &-caption {
-        padding: 0;
-        left: auto;
-        right: 8%;
-        top: 50%;
-        bottom: auto;
-        transform: translateY(-35%);
+	&-caption {
+		padding: 0;
+		left: auto;
+		right: 8%;
+		top: 50%;
+		bottom: auto;
+		transform: translateY(-35%);
 
-        &>span {
-            display: inline-block;
-            width: 4rem;
-            margin-bottom: 0.5em;
-        }
-    }
+		& > span {
+			display: inline-block;
+			width: 4rem;
+			margin-bottom: 0.5em;
+		}
+	}
 
-    &-indicators {
-        margin-bottom: 0.5rem;
-    }
+	&-indicators {
+		margin-bottom: 0.5rem;
+	}
 
-    &-indicators [data-bs-target] {
-        width: 1rem;
-        height: 1rem;
-        margin: 0 0.5em;
-    }
+	&-indicators [data-bs-target] {
+		width: 1rem;
+		height: 1rem;
+		margin: 0 0.5em;
+	}
 
-    &-indicators .active {
-        opacity: 1;
-        background-color: $black;
-    }
+	&-indicators .active {
+		opacity: 1;
+		background-color: $black;
+	}
 
-    &-control-prev,
-    &-control-next {
-        width: 7%;
-    }
+	&-control-prev,
+	&-control-next {
+		width: 7%;
+	}
 
-    &-control-prev-icon,
-    &-control-next-icon {
-        width: 2.4rem;
-        height: 4.8rem;
-    }
+	&-control-prev-icon,
+	&-control-next-icon {
+		width: 2.4rem;
+		height: 4.8rem;
+	}
 
-    &-control-prev-icon {
-        background-image: url("../../dist/images/common/btn_slide_prev.svg");
-    }
+	&-control-prev-icon {
+		background-image: url("../../dist/images/common/btn_slide_prev.svg");
+	}
 
-    &-control-next-icon {
-        background-image: url("../../dist/images/common/btn_slide_next.svg");
-    }
-
+	&-control-next-icon {
+		background-image: url("../../dist/images/common/btn_slide_next.svg");
+	}
 }
 
 .footer {
-    font-size: 1.2rem;
+	font-size: 1.2rem;
 }
 
 //
@@ -199,82 +211,81 @@ h6 {
 //
 // mobile
 @include media-breakpoint-down(lg) {
-    .nav-item {
-        padding: 1em 0.5em;
-        border-bottom: 1px solid #e2e2e2;
-    }
+	.nav-item {
+		padding: 1em 0.5em;
+		border-bottom: 1px solid #e2e2e2;
+	}
 
-    .carousel {
-        &-indicators {
-            right: 5%;
-            left: auto;
-            margin-right: 0;
-        }
+	.carousel {
+		&-indicators {
+			right: 5%;
+			left: auto;
+			margin-right: 0;
+		}
 
-        &-indicators [data-bs-target] {
-            width: 0.6rem;
-            height: 0.6rem;
-            margin: 0 0.25em;
-        }
+		&-indicators [data-bs-target] {
+			width: 0.6rem;
+			height: 0.6rem;
+			margin: 0 0.25em;
+		}
 
-        &-caption {
-            transform: translateY(-50%);
-        }
-    }
+		&-caption {
+			transform: translateY(-50%);
+		}
+	}
 }
 
 // desktop
 @include media-breakpoint-up(lg) {
+	.navbar-nav .show > .nav-link,
+	.navbar-nav .nav-link.active {
+		color: $blue;
+	}
 
-    .navbar-nav .show>.nav-link,
-    .navbar-nav .nav-link.active {
-        color: $blue;
-    }
+	.nav-item.active::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		height: 0.6rem;
+		background: $blue;
+	}
 
-    .nav-item.active::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 0.6rem;
-        background: $blue;
-    }
+	.navbar-expand-lg .navbar-nav .nav-item {
+		margin: 0 0 0 3.6rem;
+	}
 
-    .navbar-expand-lg .navbar-nav .nav-item {
-        margin: 0 0 0 3.6rem;
-    }
+	.navbar-expand-lg .navbar-nav .nav-link {
+		font-size: $font-size-base;
+		color: $blue;
+	}
 
-    .navbar-expand-lg .navbar-nav .nav-link {
-        font-size: $font-size-base;
-        color: $blue;
-    }
+	.navbar-expand-lg .offcanvas {
+		height: 6.4rem !important;
+	}
 
-    .navbar-expand-lg .offcanvas {
-        height: 6.4rem !important;
-    }
+	.navbar-expand-lg .offcanvas .offcanvas-body {
+		height: 100%;
+	}
 
-    .navbar-expand-lg .offcanvas .offcanvas-body {
-        height: 100%;
-    }
+	.navbar-expand-lg .offcanvas .offcanvas-end {
+		height: 6.4rem;
+		padding: 0;
+	}
 
-    .navbar-expand-lg .offcanvas .offcanvas-end {
-        height: 6.4rem;
-        padding: 0;
-    }
+	.carousel {
+		&-caption > h2 {
+			font-size: 4.8rem;
+		}
+	}
 
-    .carousel {
-        &-caption>h2 {
-            font-size: 4.8rem;
-        }
-    }
+	.footer {
+		&-menu {
+			width: 32rem;
 
-    .footer {
-        &-menu {
-            width: 32rem;
-
-            img {
-                transform: rotate(-90deg);
-            }
-        }
-    }
+			img {
+				transform: rotate(-90deg);
+			}
+		}
+	}
 }
