add index category menu

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,11 +1,11 @@
 $blue: #017afb;
-$indigo: #485CC7;
+$indigo: #485cc7;
 $purple: #6f42c1;
 $pink: #d63384;
-$red: #BD411D;
+$red: #bd411d;
 $orange: #fd7e14;
-$yellow: #EDE04B;
-$green: #00746D;
+$yellow: #ede04b;
+$green: #00746d;
 $teal: #20c997;
 $cyan: #0dcaf0;
 
@@ -32,17 +32,16 @@ $utility: $gray-600 !default;
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
-    "primary": $primary,
-    "secondary": $secondary,
-    "success": $success,
-    "info": $info,
-    "warning": $warning,
-    "danger": $danger,
-    "light": $light,
-    "dark": $dark,
-    "utility": $utility,
-    ) !default;
-
+	"primary": $primary,
+	"secondary": $secondary,
+	"success": $success,
+	"info": $info,
+	"warning": $warning,
+	"danger": $danger,
+	"light": $light,
+	"dark": $dark,
+	"utility": $utility,
+) !default;
 
 $grid-breakpoints: (
 	xs: 0,
@@ -51,7 +50,7 @@ $grid-breakpoints: (
 	lg: 960px,
 	xl: 1200px,
 	xxl: 1440px,
-	) !default;
+) !default;
 
 $container-max-widths: (
 	sm: 100%,
@@ -59,31 +58,28 @@ $container-max-widths: (
 	lg: 100%,
 	xl: 100%,
 	xxl: 1440px,
-	) !default;
+) !default;
 
-	
 // scss-docs-start spacer-variables-maps
 $spacer: 1.8rem !default;
 $spacers: (
-    0: 0,
-    1: $spacer * .25,
-    2: $spacer * .5,
-    3: $spacer,
-    4: $spacer * 1.5,
-    5: $spacer * 2,
-    6: $spacer * 2.5,
-    7: $spacer * 3,
-    8: $spacer * 3.5,
-    9: $spacer * 4,
-    10: $spacer * 5,
-
-    ) !default;
+	0: 0,
+	1: $spacer * 0.25,
+	2: $spacer * 0.5,
+	3: $spacer,
+	4: $spacer * 1.5,
+	5: $spacer * 2,
+	6: $spacer * 2.5,
+	7: $spacer * 3,
+	8: $spacer * 3.5,
+	9: $spacer * 4,
+	10: $spacer * 5,
+) !default;
 
 $font-size-root: 10px !default;
 $font-size-base: 1.6rem !default; // Assumes the browser default, typically `16px`
-$font-size-sm: $font-size-base * .875 !default;
+$font-size-sm: $font-size-base * 0.875 !default;
 $font-size-lg: $font-size-base * 1.25 !default;
-
 
 $font-weight-lighter: lighter !default;
 $font-weight-light: 300 !default;
@@ -102,62 +98,61 @@ $h1-font-size: $font-size-base * 2.5 !default;
 $h2-font-size: $font-size-base * 2 !default;
 $h3-font-size: $font-size-base * 1.75 !default;
 $h4-font-size: $font-size-base * 1.5 !default;
-$h5-font-size: $font-size-base * 1.25 !default;
-$h6-font-size: $font-size-base * 0.95 !default;
-$h7-font-size: $font-size-base * 0.75 !default;
-$h8-font-size: $font-size-base * 0.5 !default;
+$h5-font-size: $font-size-base * 1.15 !default; // 18.4px
+$h6-font-size: $font-size-base * 0.95 !default; // 14px
+$h7-font-size: $font-size-base * 0.75 !default; // 12px
+$h8-font-size: $font-size-base * 0.5 !default; // 10px
 // scss-docs-end font-variables
 
 // scss-docs-start font-sizes
 $font-sizes: (
-    1: $h1-font-size,
-    2: $h2-font-size,
-    3: $h3-font-size,
-    4: $h4-font-size,
-    5: $h5-font-size,
-    6: $h6-font-size,
-    7: $h7-font-size,
-    8: $h8-font-size,
-    ) !default;
+	1: $h1-font-size,
+	2: $h2-font-size,
+	3: $h3-font-size,
+	4: $h4-font-size,
+	5: $h5-font-size,
+	6: $h6-font-size,
+	7: $h7-font-size,
+	8: $h8-font-size,
+) !default;
 
 // scss-docs-start display-headings
 $display-font-sizes: (
-    1: 5rem,
-    2: 4.5rem,
-    3: 4rem,
-    4: 3.5rem,
-    5: 3rem,
-    6: 2.5rem,
-    16: 1.6rem,
-    14: 1.4rem,
-    12: 1.2rem,
-    20: 2rem,
-    24: 2.4rem,
-    32: 3.2rem,
-    ) !default;
-
+	1: 5rem,
+	2: 4.5rem,
+	3: 4rem,
+	4: 3.5rem,
+	5: 3rem,
+	6: 2.5rem,
+	16: 1.6rem,
+	14: 1.4rem,
+	12: 1.2rem,
+	20: 2rem,
+	24: 2.4rem,
+	32: 3.2rem,
+) !default;
 
 // scss-docs-start border-variables
 $border-width: 1px !default;
 $border-widths: (
-    1: 1px,
-    2: 2px,
-    3: 3px,
-    4: 4px,
-    5: 5px) !default;
-
+	1: 1px,
+	2: 2px,
+	3: 3px,
+	4: 4px,
+	5: 5px,
+) !default;
 
 // Breadcrumbs
 
 // scss-docs-start breadcrumb-variables
-$breadcrumb-font-size:              null !default;
-$breadcrumb-padding-y:              0 !default;
-$breadcrumb-padding-x:              0 !default;
-$breadcrumb-item-padding-x:         .5rem !default;
-$breadcrumb-margin-bottom:          1rem !default;
-$breadcrumb-bg:                     null !default;
-$breadcrumb-divider-color:          $gray-600 !default;
-$breadcrumb-active-color:           $blue !default;
-$breadcrumb-divider:                quote("/") !default;
-$breadcrumb-divider-flipped:        $breadcrumb-divider !default;
-$breadcrumb-border-radius:          null !default;
+$breadcrumb-font-size: null !default;
+$breadcrumb-padding-y: 0 !default;
+$breadcrumb-padding-x: 0 !default;
+$breadcrumb-item-padding-x: 0.5rem !default;
+$breadcrumb-margin-bottom: 1rem !default;
+$breadcrumb-bg: null !default;
+$breadcrumb-divider-color: $gray-600 !default;
+$breadcrumb-active-color: $blue !default;
+$breadcrumb-divider: quote("/") !default;
+$breadcrumb-divider-flipped: $breadcrumb-divider !default;
+$breadcrumb-border-radius: null !default;
