--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -47,8 +47,15 @@ button[aria-expanded="true"].btn-category img {
 	}
 }
 
-.swiper.swiperType_01 {
-	overflow: visible;
+.swiper.myNoteSlide {
+	.swiper-button-prev,
+	.swiper-button-next {
+		display: none;
+	}
+}
+
+.swiperType_01 {
+	margin: 0 1.8rem;
 
 	.photo {
 		max-width: 120px;
@@ -64,8 +71,30 @@ button[aria-expanded="true"].btn-category img {
 		background: $black;
 	}
 
+	dt {
+		font-size: 14px;
+	}
+
 	dd {
+		font-size: 12px;
 		color: #848484;
+	}
+}
+
+.menu-list {
+	background: #f9f9f9;
+
+	li {
+		border-bottom: 1px solid #e2e2e2;
+
+		a {
+			color: #343745;
+			font-weight: bold;
+		}
+
+		&:last-child {
+			border: none;
+		}
 	}
 }
 
@@ -209,6 +238,7 @@ button[aria-expanded="true"].btn-category img {
 //
 //
 //
+
 // mobile
 @include media-breakpoint-down(lg) {
 	.nav-item {
@@ -285,6 +315,98 @@ button[aria-expanded="true"].btn-category img {
 
 			img {
 				transform: rotate(-90deg);
+			}
+		}
+	}
+
+	.swiper.myNoteSlide {
+		margin: 0 8rem;
+		overflow: visible;
+
+		.swiper-button-prev,
+		.swiper-button-next {
+			display: block;
+			transform: translateY(-50%);
+		}
+		.swiper-button-prev {
+			left: -5rem;
+		}
+		.swiper-button-next {
+			right: -5rem;
+		}
+	}
+	.swiperType_01 {
+		overflow: hidden;
+
+		.photo {
+			max-width: 250px;
+		}
+		dt {
+			font-size: 24px;
+		}
+
+		dd {
+			font-size: 18px;
+
+			a {
+				font-size: 16px;
+			}
+		}
+	}
+
+	.menu-list {
+		font-size: 1.8rem;
+		background: #fff;
+		font-weight: normal;
+		line-height: 1;
+		margin-top: 2rem;
+		border-top: 1px solid #e2e2e2;
+
+		ul {
+			margin-top: 1rem;
+			border-top: 1px solid #e2e2e2;
+			border-bottom: 1px solid #e2e2e2;
+			padding: 3rem 0;
+		}
+
+		li {
+			border-bottom: none;
+			a {
+				display: block;
+				color: #343745;
+				font-weight: normal;
+				margin-right: 3rem;
+				padding-right: 3rem;
+				border-right: 1px solid #c6c6c6;
+			}
+			&:last-child a {
+				border: none;
+			}
+
+			span {
+				display: none;
+			}
+		}
+	}
+
+	.pc-category {
+		border-bottom: 1px solid #e2e2e2;
+		line-height: 1;
+
+		li {
+			a {
+				display: block;
+				font-weight: normal;
+				margin-right: 2rem;
+				padding-right: 2rem;
+				border-right: 1px solid #c6c6c6;
+			}
+			&:last-child a {
+				border: none;
+			}
+
+			&.active a {
+				font-weight: bold;
 			}
 		}
 	}
