--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -17,7 +17,7 @@ $gray-500: #6a6a6a !default;
 $gray-600: #6c6c6c !default;
 $gray-700: #333333 !default;
 $gray-800: #343a40 !default;
-$gray-900: #212529 !default;
+$gray-900: #2D2D2D !default;
 
 // scss-docs-start theme-color-variables
 $primary: $blue !default;
