--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -3,8 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
 
 body {
-	font-family: "Noto Sans KR", sans-serif;
-	font-weight: 400;
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 400;
 }
 
 h1,
@@ -13,13 +13,13 @@ h3,
 h4,
 h5,
 h6 {
-	padding: 0;
-	margin: 0;
-	letter-spacing: -1px;
+    padding: 0;
+    margin: 0;
+    letter-spacing: -1px;
 }
 
 .container-fluid {
-	padding: 0 $font-size-base;
+    padding: 0 $font-size-base;
 }
 
 .container-xxl,
@@ -28,386 +28,495 @@ h6 {
 .container-md,
 .container-sm,
 .container {
-	padding: 0;
+    padding: 0;
 }
 
 button[aria-expanded="false"].btn-category img {
-	transition: transform 0.3s;
-	transform: rotate(0);
+    transition: transform 0.3s;
+    transform: rotate(0);
 }
 
 button[aria-expanded="true"].btn-category img {
-	transition: transform 0.3s;
-	transform: rotate(180deg);
+    transition: transform 0.3s;
+    transform: rotate(180deg);
 }
-
-.breadcrumb {
-	&-item.active {
-		font-weight: 600;
-	}
-}
-
-.swiper.myNoteSlide {
-	.swiper-button-prev,
-	.swiper-button-next {
-		display: none;
-	}
-}
-
-.swiperType_01 {
-	margin: 0 1.8rem;
-
-	.photo {
-		max-width: 120px;
-	}
-
-	.swiper-horizontal > .swiper-pagination-bullets,
-	.swiper-pagination-bullets.swiper-pagination-horizontal,
-	.swiper-pagination-custom,
-	.swiper-pagination-fraction {
-		bottom: 0;
-	}
-	.swiper-pagination-bullet-active {
-		background: $black;
-	}
-
-	dt {
-		font-size: 14px;
-	}
-
-	dd {
-		font-size: 12px;
-		color: #848484;
-	}
-}
-
-.menu-list {
-	background: #f9f9f9;
-
-	li {
-		border-bottom: 1px solid #e2e2e2;
-
-		a {
-			color: #343745;
-			font-weight: bold;
-		}
-
-		&:last-child {
-			border: none;
-		}
-	}
-}
-
-//
-//
-//
-//
-//
-//
-//
-//
-//
-//
 
 .navbar {
-	&-toggler {
-		border: none;
-		padding: 0;
-	}
+    &-toggler {
+        border: none;
+        padding: 0;
+    }
 
-	&-toggler:focus {
-		box-shadow: none;
-	}
+    &-toggler:focus {
+        box-shadow: none;
+    }
 
-	&-toggler-icon {
-		width: 2.5rem;
-		background-image: url("../../dist/images/common/btn_hambuger.svg");
-	}
+    &-toggler-icon {
+        width: 2.5rem;
+        background-image: url("../../dist/images/common/btn_hambuger.svg");
+    }
 
-	&-expand-lg {
-		height: 64px;
-		padding: 0;
-	}
+    &-expand-lg {
+        height: 64px;
+        padding: 0;
+    }
 }
 
 .navbar-nav .show > .nav-link,
 .navbar-nav .nav-link.active {
-	color: #2d2d2d;
+    color: #2d2d2d;
 }
 
 .nav-item {
-	position: relative;
-	height: 100%;
-	display: flex;
-	align-items: center;
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .nav-link {
-	color: #2d2d2d;
-	height: 100%;
-	padding: 0;
-	display: flex;
-	align-items: center;
-	font-size: 1.8rem;
+    color: #2d2d2d;
+    height: 100%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    font-size: 1.8rem;
 }
 
 .btn-close {
-	font-size: 2rem;
-	opacity: 1;
+    font-size: 2rem;
+    opacity: 1;
 }
 
 .contact {
-	a {
-		font-size: 1.4rem;
-	}
+    a {
+        font-size: 1.4rem;
+    }
 }
 
 .share {
-	a {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 4rem;
-		height: 4rem;
-		background-color: #fafafa;
-	}
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 4rem;
+        height: 4rem;
+        background-color: #fafafa;
+    }
 }
 
 .carousel {
-	&-caption > h2 {
-		font-size: 2.2rem;
-	}
+    &-caption > h2 {
+        font-size: 2.2rem;
+    }
 
-	&-caption {
-		padding: 0;
-		left: auto;
-		right: 8%;
-		top: 50%;
-		bottom: auto;
-		transform: translateY(-35%);
+    &-caption {
+        padding: 0;
+        left: auto;
+        right: 8%;
+        top: 50%;
+        bottom: auto;
+        transform: translateY(-35%);
 
-		& > span {
-			display: inline-block;
-			width: 4rem;
-			margin-bottom: 0.5em;
-		}
-	}
+        & > span {
+            display: inline-block;
+            width: 4rem;
+            margin-bottom: 0.5em;
+        }
+    }
 
-	&-indicators {
-		margin-bottom: 0.5rem;
-	}
+    &-indicators {
+        margin-bottom: 0.5rem;
+    }
 
-	&-indicators [data-bs-target] {
-		width: 1rem;
-		height: 1rem;
-		margin: 0 0.5em;
-	}
+    &-indicators [data-bs-target] {
+        width: 1rem;
+        height: 1rem;
+        margin: 0 0.5em;
+    }
 
-	&-indicators .active {
-		opacity: 1;
-		background-color: $black;
-	}
+    &-indicators .active {
+        opacity: 1;
+        background-color: $black;
+    }
 
-	&-control-prev,
-	&-control-next {
-		width: 7%;
-	}
+    &-control-prev,
+    &-control-next {
+        width: 7%;
+    }
 
-	&-control-prev-icon,
-	&-control-next-icon {
-		width: 2.4rem;
-		height: 4.8rem;
-	}
+    &-control-prev-icon,
+    &-control-next-icon {
+        width: 2.4rem;
+        height: 4.8rem;
+    }
 
-	&-control-prev-icon {
-		background-image: url("../../dist/images/common/btn_slide_prev.svg");
-	}
+    &-control-prev-icon {
+        background-image: url("../../dist/images/common/btn_slide_prev.svg");
+    }
 
-	&-control-next-icon {
-		background-image: url("../../dist/images/common/btn_slide_next.svg");
-	}
+    &-control-next-icon {
+        background-image: url("../../dist/images/common/btn_slide_next.svg");
+    }
 }
 
 .footer {
-	font-size: 1.2rem;
+    font-size: 1.2rem;
 }
 
-//
-//
-//
-//
-//
-//
+.breadcrumb {
+    &-item.active {
+        font-weight: 600;
+    }
+}
 
-// mobile
-@include media-breakpoint-down(lg) {
-	.nav-item {
-		padding: 1em 0.5em;
-		border-bottom: 1px solid #e2e2e2;
+.swiper.myNoteSlide {
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: none;
+    }
+}
+
+.swiperType_01 {
+    margin: 0 1.8rem;
+
+    .photo {
+        max-width: 120px;
+    }
+
+    .swiper-horizontal > .swiper-pagination-bullets,
+    .swiper-pagination-bullets.swiper-pagination-horizontal,
+    .swiper-pagination-custom,
+    .swiper-pagination-fraction {
+        bottom: 0;
+    }
+    .swiper-pagination-bullet-active {
+        background: $black;
+    }
+
+    dt {
+        font-size: 14px;
+    }
+
+    dd {
+        font-size: 12px;
+        color: #848484;
+    }
+}
+
+
+.swiperType_02 {
+    margin: 0 1.8rem;
+
+    .title-area {
+        background: rgba(236,236,236,0.3);
+        border: 1px solid rgba(132,132,132,0.3);
+    }
+
+    dt {
+        font-size: 1.6rem;
+    }
+
+    dd {
+        font-size: 1.2rem;
+    }
+}
+
+.swiperType_card {
+    margin: 0 1.8rem;
+
+	.card {
+		overflow: hidden;
 	}
 
-	.carousel {
-		&-indicators {
-			right: 5%;
-			left: auto;
-			margin-right: 0;
-		}
+	.photo {
+		min-height: 30rem;
+		background: #d9d9d9;
+	}
 
-		&-indicators [data-bs-target] {
-			width: 0.6rem;
-			height: 0.6rem;
-			margin: 0 0.25em;
-		}
+	.card-body {
+		display: flex;
+		flex-direction: column;
+		min-height: 19rem;
+		background: #999;
+	}
 
-		&-caption {
-			transform: translateY(-50%);
+
+    .swiper-horizontal > .swiper-pagination-bullets,
+    .swiper-pagination-bullets.swiper-pagination-horizontal,
+    .swiper-pagination-custom,
+    .swiper-pagination-fraction {
+        bottom: 0;
+    }
+    .swiper-pagination-bullet-active {
+        background: $black;
+    }
+
+
+    dt {
+        font-size: 1.6rem;
+    }
+
+    dd {
+        font-size: 1.2rem;
+
+    }
+	dd:last-child {
+		margin-top: auto;
+	}
+}
+
+// Common End
+//
+//
+//
+//
+//
+
+// Mobile Start
+@include media-breakpoint-down(lg) {
+    .nav-item {
+        padding: 1em 0.5em;
+        border-bottom: 1px solid #e2e2e2;
+    }
+
+    .carousel {
+        &-indicators {
+            right: 5%;
+            left: auto;
+            margin-right: 0;
+        }
+
+        &-indicators [data-bs-target] {
+            width: 0.6rem;
+            height: 0.6rem;
+            margin: 0 0.25em;
+        }
+
+        &-caption {
+            transform: translateY(-50%);
+        }
+    }
+
+	.menu-list {
+		background: #f9f9f9;
+		padding: 0 1.8rem;
+
+		li {
+			border-bottom: 1px solid #e2e2e2;
+
+			a {
+				color: #343745;
+				font-weight: bold;
+			}
+
+			&:last-child {
+				border: none;
+			}
 		}
+	}
+	.sub-category {
+		display: none;
 	}
 }
 
 // desktop
 @include media-breakpoint-up(lg) {
-	.navbar-nav .show > .nav-link,
-	.navbar-nav .nav-link.active {
-		color: $blue;
-	}
+    .navbar-nav .show > .nav-link,
+    .navbar-nav .nav-link.active {
+        color: $blue;
+    }
 
-	.nav-item.active::after {
-		content: "";
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		height: 0.6rem;
-		background: $blue;
-	}
+    .nav-item.active::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 0.6rem;
+        background: $blue;
+    }
 
-	.navbar-expand-lg .navbar-nav .nav-item {
-		margin: 0 0 0 3.6rem;
-	}
+    .navbar-expand-lg .navbar-nav .nav-item {
+        margin: 0 0 0 3.6rem;
+    }
 
-	.navbar-expand-lg .navbar-nav .nav-link {
-		font-size: $font-size-base;
-		color: $blue;
-	}
+    .navbar-expand-lg .navbar-nav .nav-link {
+        font-size: $font-size-base;
+        color: $blue;
+    }
 
-	.navbar-expand-lg .offcanvas {
-		height: 6.4rem !important;
-	}
+    .navbar-expand-lg .offcanvas {
+        height: 6.4rem !important;
+    }
 
-	.navbar-expand-lg .offcanvas .offcanvas-body {
-		height: 100%;
-	}
+    .navbar-expand-lg .offcanvas .offcanvas-body {
+        height: 100%;
+    }
 
-	.navbar-expand-lg .offcanvas .offcanvas-end {
-		height: 6.4rem;
-		padding: 0;
-	}
+    .navbar-expand-lg .offcanvas .offcanvas-end {
+        height: 6.4rem;
+        padding: 0;
+    }
 
-	.carousel {
-		&-caption > h2 {
-			font-size: 4.8rem;
-		}
-	}
+    .carousel {
+        &-caption > h2 {
+            font-size: 4.8rem;
+        }
+    }
 
-	.footer {
-		&-menu {
-			width: 32rem;
+    .footer {
+        &-menu {
+            width: 32rem;
 
-			img {
-				transform: rotate(-90deg);
-			}
-		}
-	}
+            img {
+                transform: rotate(-90deg);
+            }
+        }
+    }
 
-	.swiper.myNoteSlide {
-		margin: 0 8rem;
-		overflow: visible;
+    .swiper.myNoteSlide {
+        margin: 0 8rem;
+        overflow: visible;
 
-		.swiper-button-prev,
-		.swiper-button-next {
-			display: block;
-			transform: translateY(-50%);
-		}
-		.swiper-button-prev {
-			left: -5rem;
-		}
-		.swiper-button-next {
-			right: -5rem;
-		}
-	}
-	.swiperType_01 {
-		overflow: hidden;
+        .swiper-button-prev,
+        .swiper-button-next {
+            display: block;
+            transform: translateY(-50%);
+        }
+        .swiper-button-prev {
+            left: -5rem;
+        }
+        .swiper-button-next {
+            right: -5rem;
+        }
+    }
+    .swiperType_01 {
+        overflow: hidden;
 
-		.photo {
-			max-width: 250px;
-		}
-		dt {
-			font-size: 24px;
-		}
+        .photo {
+            max-width: 250px;
+        }
+        dt {
+            font-size: 24px;
+        }
 
-		dd {
-			font-size: 18px;
+        dd {
+            font-size: 18px;
 
-			a {
-				font-size: 16px;
-			}
-		}
-	}
+            a {
+                font-size: 16px;
+            }
+        }
+    }
 
-	.menu-list {
-		font-size: 1.8rem;
-		background: #fff;
-		font-weight: normal;
-		line-height: 1;
-		margin-top: 2rem;
-		border-top: 1px solid #e2e2e2;
-
-		ul {
+    .menu-list {
+        background: #fff;
+        font-weight: normal;
+        line-height: 1;
+        border-top: 1px solid #e2e2e2;
+		
+        & > ul {
 			margin-top: 1rem;
-			border-top: 1px solid #e2e2e2;
-			border-bottom: 1px solid #e2e2e2;
-			padding: 3rem 0;
-		}
+            border-top: 1px solid #e2e2e2;
+            padding: 3rem 0 2rem 0;
+        }
 
-		li {
-			border-bottom: none;
+        & > ul > li {
+			padding: 0.2rem 0;
+			margin-right: 3rem;
+			padding-right: 3rem;
+			border-right: 1px solid #c6c6c6;
+
 			a {
-				display: block;
-				color: #343745;
-				font-weight: normal;
-				margin-right: 3rem;
-				padding-right: 3rem;
-				border-right: 1px solid #c6c6c6;
+                display: block;
+                color: #343745;
+				font-size: 1.8rem;
+                font-weight: normal;
+				text-decoration: none;
+            }
+
+            &:last-child {
+				border: none;
+            }
+
+			&.active a{
+				position: relative;
+				color: $primary;
+				font-weight: bold;
 			}
-			&:last-child a {
+
+			&.active a::after{
+				content: '';
+				position: absolute;
+				left: 0;
+				bottom: -1rem;
+				width: 100%;
+				height: 0.3rem;
+				background: $primary;
+			}
+
+            span {
+                display: none;
+            }
+        }
+
+    }
+
+	.sub-category {
+		div {
+			display: none;
+		}
+		ol {
+			margin-right: 3rem;
+			padding-right: 3rem;
+			border-right: 1px solid #c6c6c6;
+
+			&:last-child {
 				border: none;
 			}
-
-			span {
-				display: none;
-			}
 		}
-	}
-
-	.pc-category {
-		border-bottom: 1px solid #e2e2e2;
-		line-height: 1;
-
 		li {
-			a {
-				display: block;
-				font-weight: normal;
-				margin-right: 2rem;
-				padding-right: 2rem;
-				border-right: 1px solid #c6c6c6;
+			margin-right: 3rem;
+			
+			&:last-child {
+				margin-right: 0;
 			}
-			&:last-child a {
-				border: none;
-			}
-
-			&.active a {
+			&:hover,
+			&.active {
+				color: $primary;
 				font-weight: bold;
 			}
 		}
 	}
+
+    .pc-category {
+        line-height: 1;
+
+        li {
+            a {
+                display: block;
+                font-weight: normal;
+                margin-right: 1.5rem;
+                padding-right: 1.5rem;
+                border-right: 1px solid #c6c6c6;
+            }
+            &:last-child a {
+                border: none;
+            }
+
+            &.active a {
+                font-weight: bold;
+            }
+        }
+    }
+
+    .swiperType_02 {
+        dt {
+            font-size: 2rem;
+        }
+
+        dd {
+            font-size: 1.6rem;
+        }
+    }
 }
