--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -17,7 +17,7 @@ $gray-500: #6a6a6a !default;
 $gray-600: #6c6c6c !default;
 $gray-700: #333333 !default;
 $gray-800: #343a40 !default;
-$gray-900: #2D2D2D !default;
+$gray-900: #2d2d2d !default;
 
 // scss-docs-start theme-color-variables
 $primary: $blue !default;
@@ -156,3 +156,24 @@ $breadcrumb-active-color: $blue !default;
 $breadcrumb-divider: quote("/") !default;
 $breadcrumb-divider-flipped: $breadcrumb-divider !default;
 $breadcrumb-border-radius: null !default;
+
+/* 스크롤바 */
+::-webkit-scrollbar {
+	width: 6px;
+} /* 스크롤 바 */
+::-webkit-scrollbar-track {
+	background-color: transparent;
+} /* 스크롤 바 밑의 배경 */
+::-webkit-scrollbar-thumb {
+	background: #aaa;
+	border-radius: 0.25rem;
+} /* 실질적 스크롤 바 */
+::-webkit-scrollbar-thumb:hover {
+	background: transparent;
+} /* 실질적 스크롤 바 위에 마우스를 올려다 둘 때 */
+::-webkit-scrollbar-thumb:active {
+	background: #808080;
+} /* 실질적 스크롤 바를 클릭할 때 */
+::-webkit-scrollbar-button {
+	display: none;
+} /* 스크롤 바 상 하단 버튼 */
